@@ -1444,7 +1444,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '192';
+$wgStyleVersion = '193';
 
 
 # Server-side caching:
